TargetType management over common RepositoryManagement
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>